# azure-disk-snapshot-cleanup

./: .coveragerc  .gitignore  LICENSE  conftest.py  main.py  pyproject.toml  settings.toml
snapcleanup/: __init__.py  __main__.py  app.py  cli.py  config.py  core.py  entities.py  models.py  output.py  settings.toml
snapcleanup/azure/: __init__ .py  azure.py  cli.py  resource_group.py  snapshot.py  subscription.py
tests/: conftest.py  test_app.py  test_core.py  test_entities.py  test_output.py
