[tool.poetry]
name = "azure-disk-snapshot-cleanup"
version = "0.1.0"
description = "Azure Disk Snapshot Cleanup"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
license = "MIT"
include = ["snapcleanup"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.8"
azure-cli-core = "^2.36.0"
rich = "^12.4.0"
typer = {extras = ["all"], version = "^0.4.1"}
azure-cli = "^2.36.0"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.8"
black = "^22.3.0"
autopep8 = "^1.6.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
snapcleanup = "snapcleanup.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
