[tool.poetry]
name = "azure-disk-snapshot-cleanup"
version = "1.0.0"
description = "Azure Disk Snapshot Cleanup"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
license = "MIT"
packages = [
    { include = "snapcleanup" }
]

[[tool.poetry.source]]
name = "pull-artifacts"
url = "https://pkgs.dev.azure.com/VALE-Automation/Cloud-Automation/_packaging/Python-Artifacts/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.8"
rich = "^12.4.0"
typer = {extras = ["all"], version = "^0.4.1"}
prettytable = "^3.3.0"
azure-identity = "^1.10.0"
python-library-azure = {path = "../Python-Library-Azure"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.8"
black = "^22.3.0"
autopep8 = "^1.6.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
snapcleanup = "snapcleanup.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
